[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Village/YggdrasilMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Village/YggdrasilMenuWindow.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Village/contaminationLevel.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Village/spaceLeft.gd" type="Script" id=4]
[ext_resource path="res://UIpack/UI/blue_button07.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Village/yggdrasilLevelLabel.gd" type="Script" id=6]

[node name="YggdrasilMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="YggdrasilMenuWindow" type="WindowDialog" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 89.0
margin_right = 844.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Yggdrasil"
resizable = false
script = ExtResource( 2 )

[node name="Contamination Level" type="Label" parent="YggdrasilMenuWindow" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 65.0
margin_right = 147.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Contamination Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="contaminationLevel" type="Label" parent="YggdrasilMenuWindow/Contamination Level" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 157.0
margin_top = -2.0
margin_right = 246.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )

[node name="Space Left" type="Label" parent="YggdrasilMenuWindow" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 99.0
margin_right = 210.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Space Left:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="spaceLeft" type="Label" parent="YggdrasilMenuWindow/Space Left" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_top = -2.0
margin_right = 272.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )

[node name="UpgradeButton" type="TouchScreenButton" parent="YggdrasilMenuWindow" index="3"]

position = Vector2( 198.822, 240.545 )
scale = Vector2( 5.31403, 2.37503 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="upgradeLabel" type="RichTextLabel" parent="YggdrasilMenuWindow/UpgradeButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 16.0
margin_right = 63.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Upgrade"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="YggdrasilLevel" type="Label" parent="YggdrasilMenuWindow" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.0
margin_top = 129.0
margin_right = 200.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Yggdrasil Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yggdrasilLevelLabel" type="Label" parent="YggdrasilMenuWindow/YggdrasilLevel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_top = 3.0
margin_right = 269.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )

[connection signal="open_yggdrasil_menu" from="." to="YggdrasilMenuWindow" method="_on_YggdrasilMenu_open_yggdrasil_menu"]

[connection signal="update_yggdrasil_status" from="." to="YggdrasilMenuWindow/Contamination Level/contaminationLevel" method="_on_YggdrasilMenu_update_yggdrasil_status"]

[connection signal="update_yggdrasil_status_space" from="." to="YggdrasilMenuWindow/Space Left/spaceLeft" method="_on_YggdrasilMenu_update_yggdrasil_status_space"]

[connection signal="update_yggdrasil_status_ygglevel" from="." to="YggdrasilMenuWindow/YggdrasilLevel/yggdrasilLevelLabel" method="_on_YggdrasilMenu_update_yggdrasil_status_ygglevel"]

[connection signal="pressed" from="YggdrasilMenuWindow/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]


